Revert "fix: wrap navset_pill_list in .nca-setup-pills div for reliable CSS targeting"
This reverts commit e74a830760f2287ceacbbbdba7d60b17dd52ecf9.

--- a/inst/shiny/www/main.css
+++ b/inst/shiny/www/main.css
@@ -887,20 +887,21 @@ h4.modal-title:has(#loading-title) {
 }
 
 /* NCA setup: fix pill-list nav column to 200px */
-.nca-setup-pills > .row {
+.page-container .row:has(> [class*="col-sm"] > .nav-pills) {
   display: flex !important;
   flex-wrap: nowrap !important;
 }
 
-.nca-setup-pills > .row > [class*="col-"]:first-child {
+.page-container .row > [class*="col-sm"]:has(.nav-pills) {
   width: 200px !important;
   min-width: 200px !important;
   max-width: 200px !important;
   flex: 0 0 200px !important;
+  padding-right: 0 !important;
 }
 
-.nca-setup-pills > .row > [class*="col-"]:last-child {
+.page-container .row > [class*="col-sm"]:has(.nav-pills) ~ [class*="col-sm"] {
   flex: 1 1 auto !important;
-  width: auto !important;
-  max-width: none !important;
+  width: calc(100% - 200px) !important;
+  max-width: calc(100% - 200px) !important;
 }
